--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Odin Recipies</h1>
     <a href="RECIPIES/Samosa.html">SAMOSA</a>
+    <br>
+    <a href="RECIPIES/pizza.html">PIZZA</a>
+   
 </body>
 </html>
