--- a/RECIPIES/Samosa.html
+++ b/RECIPIES/Samosa.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>samosa</h1>
-    <img src="RECIPIES\samosa.jpeg" alt="THIS IS A PICTURE OF A SAMOSA">
+    <img src="https://th.bing.com/th/id/OIP.Xp2RQVjyCr3kN1G8VhcK_wHaE_?w=263&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="THIS IS A PICTURE OF A SAMOSA">
     <h2>DESCRIPTION</h2>
     <p>Samosa is a popular deep-fried pastry known for its crispy outer layer and savory filling. Originating in South Asia, the samosa has become a beloved snack in many parts of the world. The traditional triangular shape of the samosa is achieved by folding a thin layer of dough around a spiced filling, which is then sealed and fried until golden brown.</p>
     <br>
