--- a/RECIPIES/pizza.html
+++ b/RECIPIES/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>PIZZA</h1>
-    <img src="RECIPIES\Pizza.jpg" alt="THIS IS A PIC OF PIZZA">
+    <img src="https://th.bing.com/th/id/OIP.OdZir1wwDi5zFkdc6B3YfAHaEk?w=287&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="THIS IS A PIC OF PIZZA">
     <h2>DESCRIPTION</h2>
     <p>Pizza is a popular Italian dish that has become a beloved culinary staple worldwide. It traditionally consists of a round, flat base of dough baked with various toppings.</p>
     <ul>
